# rampstudio

./: Cargo.toml  README.md  design.txt  settings.json
resources/: cobalt.tmTheme  dark-rust.tmTheme  editor_settings.json  explorer_settings.json  terminal_settings.json
src/: constants.rs  lib.rs  main.rs  preferences.rs  settings.rs  windows.rs
src/logic/: mod.rs  settings.rs  windows_obj.rs
src/objects/: mod.rs  windows_obj.rs
src/rampstack/: mod.rs  project.rs  settings.rs  windows.rs
